force-app/main/default/objects/Camp_Lejeune__c/fields/Military_Family_Member_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Military_Family_Member_Full_Name__c</fullName>
    <description>If military family member, please state the full name of the individual or family member who was stationed on base.</description>
    <inlineHelpText>If military family member, please state the full name of the individual or family member who was stationed on base.</inlineHelpText>
    <label>Military Family Member Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>