force-app/main/default/objects/Camp_Lejeune__c/fields/Miscarriage_Date__c.field-meta.xml
<CustomField>
    <fullName>Miscarriage_Date__c</fullName>
    <label>Miscarriage Date</label>
    <type>Date</type>
</CustomField>