force-app/main/default/objects/Camp_Lejeune__c/fields/Miscarriage_Fetal_Death_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Miscarriage_Fetal_Death_Diagnosis_Date__c</fullName>
    <label>Miscarriage/Fetal Death Diagnosis Date</label>
    <type>Date</type>
</CustomField>