force-app/main/default/objects/Camp_Lejeune__c/fields/Miscarriage_Treatment_Facility_Address__c.field-meta.xml
<CustomField>
    <fullName>Miscarriage_Treatment_Facility_Address__c</fullName>
    <label>Miscarriage Treatment Facility Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>