force-app/main/default/objects/Camp_Lejeune__c/fields/Miscarriages_Fertility_Pregnancy_Issues__c.field-meta.xml
<CustomField>
    <fullName>Miscarriages_Fertility_Pregnancy_Issues__c</fullName>
    <description>If applicable, please indicate how many miscarriages result and when or any other fertility / pregnancy  issues or infant injuries along with dates from the previous question</description>
    <inlineHelpText>If applicable, please indicate how many miscarriages result and when or any other fertility / pregnancy  issues or infant injuries along with dates from the previous question</inlineHelpText>
    <label>Miscarriages, Fertility/Pregnancy Issues</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>