force-app/main/default/objects/Camp_Lejeune__c/fields/Mother_s_Name_At_Birth__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Name_At_Birth__c</fullName>
    <inlineHelpText>What was your mother’s name at the time of your birth?</inlineHelpText>
    <label>Mother&apos;s Name At Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>