force-app/main/default/objects/Camp_Lejeune__c/fields/Multiple_Myeloma_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Myeloma_Diagnosis_Date__c</fullName>
    <label>Multiple Myeloma Diagnosis Date</label>
    <type>Date</type>
</CustomField>