force-app/main/default/objects/Camp_Lejeune__c/fields/Multiple_Sclerosis_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Sclerosis_Diagnosis_Date__c</fullName>
    <label>Multiple Sclerosis Diagnosis Date</label>
    <type>Date</type>
</CustomField>