force-app/main/default/objects/Camp_Lejeune__c/fields/Neurobehavioral_Deficits_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Neurobehavioral_Deficits_Diagnosis_Date__c</fullName>
    <label>Neurobehavioral Deficits Diagnosis Date</label>
    <type>Date</type>
</CustomField>