force-app/main/default/objects/Camp_Lejeune__c/fields/Neurobehavioral_Effects_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Neurobehavioral_Effects_Diagnosis_Date__c</fullName>
    <label>Neurobehavioral Effects Diagnosis Date</label>
    <type>Date</type>
</CustomField>