force-app/main/default/objects/Camp_Lejeune__c/fields/Neurological_Effects_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Neurological_Effects_Diagnosis_Date__c</fullName>
    <label>Neurological Effects Diagnosis Date</label>
    <type>Date</type>
</CustomField>