force-app/main/default/objects/Camp_Lejeune__c/fields/Next_Of_Kin__c.field-meta.xml
<CustomField>
    <fullName>Next_Of_Kin__c</fullName>
    <description>Are you the next of kin?</description>
    <inlineHelpText>Are you the next of kin?</inlineHelpText>
    <label>Next Of Kin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>