force-app/main/default/objects/Camp_Lejeune__c/fields/Next_Of_Kin_Name__c.field-meta.xml
<CustomField>
    <fullName>Next_Of_Kin_Name__c</fullName>
    <label>Next Of Kin Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>