force-app/main/default/objects/Camp_Lejeune__c/fields/Next_Of_Kin_Phone__c.field-meta.xml
<CustomField>
    <fullName>Next_Of_Kin_Phone__c</fullName>
    <label>Next Of Kin Phone</label>
    <type>Phone</type>
</CustomField>