force-app/main/default/objects/Camp_Lejeune__c/fields/Non_Co_Living_Emergency_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Non_Co_Living_Emergency_Contact_Name__c</fullName>
    <label>Non-Co-Living Emergency Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>