force-app/main/default/objects/Camp_Lejeune__c/fields/Non_Co_Living_Emergency_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Non_Co_Living_Emergency_Contact_Phone__c</fullName>
    <label>Non-Co-Living Emergency Contact Phone</label>
    <type>Phone</type>
</CustomField>