force-app/main/default/objects/Camp_Lejeune__c/fields/Non_Hodgkin_Lymphoma_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Non_Hodgkin_Lymphoma_Diagnosis_Date__c</fullName>
    <label>Non-Hodgkin Lymphoma Diagnosis Date</label>
    <type>Date</type>
</CustomField>