force-app/main/default/objects/Camp_Lejeune__c/fields/Number_of_Surgeries__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Surgeries__c</fullName>
    <label>Number of Surgeries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>