force-app/main/default/objects/Camp_Lejeune__c/fields/Oral_Cancer_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Oral_Cancer_Diagnosis_Date__c</fullName>
    <label>Oral Cancer Diagnosis Date</label>
    <type>Date</type>
</CustomField>