force-app/main/default/objects/Camp_Lejeune__c/fields/Other_Serious_Birth_Defects_Diagnosis_Da__c.field-meta.xml
<CustomField>
    <fullName>Other_Serious_Birth_Defects_Diagnosis_Da__c</fullName>
    <label>Other Serious Birth Defects Diagnosis Da</label>
    <type>Date</type>
</CustomField>