force-app/main/default/objects/Camp_Lejeune__c/fields/Ovarian_Cancer_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Ovarian_Cancer_Diagnosis_Date__c</fullName>
    <label>Ovarian Cancer Diagnosis Date</label>
    <type>Date</type>
</CustomField>