force-app/main/default/objects/Camp_Lejeune__c/fields/Pancreatic_Cancer_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Pancreatic_Cancer_Diagnosis_Date__c</fullName>
    <label>Pancreatic Cancer Diagnosis Date</label>
    <type>Date</type>
</CustomField>