force-app/main/default/objects/Camp_Lejeune__c/fields/Parkinson_s_Disease_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Parkinson_s_Disease_Diagnosis_Date__c</fullName>
    <label>Parkinson&apos;s Disease Diagnosis Date</label>
    <type>Date</type>
</CustomField>