force-app/main/default/objects/Camp_Lejeune__c/fields/Pharmacy_Information__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Information__c</fullName>
    <description>Please list all pharmacy names and addresses where perscriptions were filled</description>
    <inlineHelpText>Please list all pharmacy names and addresses where perscriptions were filled</inlineHelpText>
    <label>Pharmacy Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>