force-app/main/default/objects/Camp_Lejeune__c/fields/Pharmacy_Name__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Name__c</fullName>
    <inlineHelpText>What is the name of pharmacy in which you had your medication filled?</inlineHelpText>
    <label>Pharmacy Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>