force-app/main/default/objects/Camp_Lejeune__c/fields/Pharyngeal_Cancer_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Pharyngeal_Cancer_Diagnosis_Date__c</fullName>
    <label>Pharyngeal Cancer Diagnosis Date</label>
    <type>Date</type>
</CustomField>