force-app/main/default/objects/Camp_Lejeune__c/fields/Power_Of_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Power_Of_Attorney__c</fullName>
    <description>Do you have power of attorney?</description>
    <inlineHelpText>Do you have power of attorney?</inlineHelpText>
    <label>Power Of Attorney</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>