force-app/main/default/objects/Camp_Lejeune__c/fields/Preferred_Communication_Methods__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Communication_Methods__c</fullName>
    <label>Preferred Communication Methods</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>