force-app/main/default/objects/Camp_Lejeune__c/fields/Presence_at_Camp_Lejeune_Details__c.field-meta.xml
<CustomField>
    <fullName>Presence_at_Camp_Lejeune_Details__c</fullName>
    <description>What was the nature of your presence at Camp Lejeune? What was your job and the name of your employer?</description>
    <inlineHelpText>What was the nature of your presence at Camp Lejeune? What was your job and the name of your employer?</inlineHelpText>
    <label>Presence at Camp Lejeune Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>