force-app/main/default/objects/Camp_Lejeune__c/fields/Private_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Private_Contractor__c</fullName>
    <inlineHelpText>Are/were you a private contractor?</inlineHelpText>
    <label>Private Contractor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>