force-app/main/default/objects/Camp_Lejeune__c/fields/Probate_Case_openned__c.field-meta.xml
<CustomField>
    <fullName>Probate_Case_openned__c</fullName>
    <label>Probate Case openned?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>