force-app/main/default/objects/Camp_Lejeune__c/fields/Prostate_Cancer_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Prostate_Cancer_Diagnosis_Date__c</fullName>
    <label>Prostate Cancer Diagnosis Date</label>
    <type>Date</type>
</CustomField>