force-app/main/default/objects/Camp_Lejeune__c/fields/Receive_VA_Disability_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Receive_VA_Disability_Benefits__c</fullName>
    <label>Receive VA Disability Benefits</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>