force-app/main/default/objects/Camp_Lejeune__c/fields/Received_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Received_Benefits__c</fullName>
    <label>Received Benefits</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SSD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>