force-app/main/default/objects/Camp_Lejeune__c/fields/Received_Ordered_Prescribed_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Received_Ordered_Prescribed_Treatment__c</fullName>
    <description>Did you receive ordered or prescribed treatment? (Ex: Documented w/ their physician)</description>
    <inlineHelpText>Did you receive ordered or prescribed treatment? (Ex: Documented w/ their physician)?</inlineHelpText>
    <label>Received Ordered/Prescribed Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>