force-app/main/default/objects/Camp_Lejeune__c/fields/Received_Treatment_Details__c.field-meta.xml
<CustomField>
    <fullName>Received_Treatment_Details__c</fullName>
    <inlineHelpText>What treatment did you receive?</inlineHelpText>
    <label>Received Treatment Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>