force-app/main/default/objects/Camp_Lejeune__c/fields/Records_to_Substantiate_Camp_Time__c.field-meta.xml
<CustomField>
    <fullName>Records_to_Substantiate_Camp_Time__c</fullName>
    <description>What other housing records, employment records or military records do you have to substantiate your  time on Camp Lejeune?</description>
    <inlineHelpText>What other housing records, employment records or military records do you have to substantiate your  time on Camp Lejeune?</inlineHelpText>
    <label>Records to Substantiate Camp L. Time</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>