force-app/main/default/objects/Camp_Lejeune__c/fields/Rectal_Cancer_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Rectal_Cancer_Diagnosis_Date__c</fullName>
    <label>Rectal Cancer Diagnosis Date</label>
    <type>Date</type>
</CustomField>