force-app/main/default/objects/Camp_Lejeune__c/fields/Relation_with_Client__c.field-meta.xml
<CustomField>
    <fullName>Relation_with_Client__c</fullName>
    <label>Relation with Client</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>