force-app/main/default/objects/Camp_Lejeune__c/fields/Relationship_To_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Relationship_To_Sponsor__c</fullName>
    <label>Relationship To Sponsor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>