force-app/main/default/objects/Camp_Lejeune__c/fields/Represented_By_Law_Firm__c.field-meta.xml
<CustomField>
    <fullName>Represented_By_Law_Firm__c</fullName>
    <inlineHelpText>Are you currently being represented by another law firm regarding this case?</inlineHelpText>
    <label>Represented By Law Firm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>