force-app/main/default/objects/Camp_Lejeune__c/fields/Residence_Work_Station_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Residence_Work_Station_Addresses__c</fullName>
    <description>Please list all address(es) of where you lived, worked or were stationed including the name of the base</description>
    <inlineHelpText>Please list all address(es) of where you lived, worked or were stationed including the name of the base</inlineHelpText>
    <label>Residence/Work/Station Addresses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>