force-app/main/default/objects/Camp_Lejeune__c/fields/Resident_of_the_United_States__c.field-meta.xml
<CustomField>
    <fullName>Resident_of_the_United_States__c</fullName>
    <label>Resident of the United States</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>