force-app/main/default/objects/Camp_Lejeune__c/fields/Retainer_Sent__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Sent__c</fullName>
    <label>Retainer Sent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AG</fullName>
            </value>
            <value>
                <fullName>MBM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>