force-app/main/default/objects/Camp_Lejeune__c/fields/Service_Branch__c.field-meta.xml
<CustomField>
    <fullName>Service_Branch__c</fullName>
    <inlineHelpText>What branch did they serve?</inlineHelpText>
    <label>Service Branch</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>