force-app/main/default/objects/Camp_Lejeune__c/fields/Service_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Entry_Date__c</fullName>
    <inlineHelpText>What Date Did They Enter the Armed Services?</inlineHelpText>
    <label>Service Entry Date</label>
    <type>Date</type>
</CustomField>