force-app/main/default/objects/Camp_Lejeune__c/fields/Service_Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Exit_Date__c</fullName>
    <inlineHelpText>What Date Did They Leave the Armed Services?</inlineHelpText>
    <label>Service Exit Date</label>
    <type>Date</type>
</CustomField>