force-app/main/default/objects/Camp_Lejeune__c/fields/Service_Member_Service_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Member_Service_Number__c</fullName>
    <label>Service Member Service Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>