force-app/main/default/objects/Camp_Lejeune__c/fields/Signing_Authority_as__c.field-meta.xml
<CustomField>
    <fullName>Signing_Authority_as__c</fullName>
    <label>Signing Authority as?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>As an Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>