force-app/main/default/objects/Camp_Lejeune__c/fields/Soft_Tissue_Cancer_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Soft_Tissue_Cancer_Diagnosis_Date__c</fullName>
    <label>Soft Tissue Cancer Diagnosis Date</label>
    <type>Date</type>
</CustomField>