force-app/main/default/objects/Camp_Lejeune__c/fields/Sponsor_Name__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Name__c</fullName>
    <label>Sponsor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>