force-app/main/default/objects/Camp_Lejeune__c/fields/State_Of_Passing__c.field-meta.xml
<CustomField>
    <fullName>State_Of_Passing__c</fullName>
    <label>State Of Passing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>