force-app/main/default/objects/Camp_Lejeune__c/fields/Surgery_Description__c.field-meta.xml
<CustomField>
    <fullName>Surgery_Description__c</fullName>
    <label>Surgery Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>