force-app/main/default/objects/Camp_Lejeune__c/fields/Surgery_Location__c.field-meta.xml
<CustomField>
    <fullName>Surgery_Location__c</fullName>
    <inlineHelpText>Where was the surgery performed?</inlineHelpText>
    <label>Surgery Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>