force-app/main/default/objects/Camp_Lejeune__c/fields/Systemic_Sclerosis_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Systemic_Sclerosis_Diagnosis_Date__c</fullName>
    <label>Systemic Sclerosis Diagnosis Date</label>
    <type>Date</type>
</CustomField>