force-app/main/default/objects/Camp_Lejeune__c/fields/Thyroid_Cancer_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Thyroid_Cancer_Diagnosis_Date__c</fullName>
    <label>Thyroid Cancer Diagnosis Date</label>
    <type>Date</type>
</CustomField>