force-app/main/default/objects/Camp_Lejeune__c/fields/Tier_1_Diagnoses__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_Diagnoses__c</fullName>
    <label>Tier 1 Diagnoses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bladder cancer</fullName>
            </value>
            <value>
                <fullName>Kidney cancer</fullName>
            </value>
            <value>
                <fullName>Liver cancer</fullName>
            </value>
            <value>
                <fullName>Non-Hodgkin lymphoma</fullName>
            </value>
            <value>
                <fullName>None of the above (tier 2,3,4)</fullName>
            </value>
            <value>
                <fullName>Parkinson&apos;s disease</fullName>
            </value>
            <value>
                <fullName>Leukemia (All types, adult or childhood)</fullName>
            </value>
            <value>
                <fullName>Kidney disease (End stage renal (ESRD), Renal Toxicity, Chronic Kidney Disease, etc.)</fullName>
            </value>
            <value>
                <fullName>Multiple myeloma and myelodysplastic Syndromes</fullName>
            </value>
            <value>
                <fullName>Systemic sclerosis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>