force-app/main/default/objects/Camp_Lejeune__c/fields/Tier_3_Diagnoses__c.field-meta.xml
<CustomField>
    <fullName>Tier_3_Diagnoses__c</fullName>
    <label>Tier 3 Diagnoses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aplastic Anemia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>