force-app/main/default/objects/Camp_Lejeune__c/fields/Treatment_Date__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Date__c</fullName>
    <label>Treatment Date</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>