force-app/main/default/objects/Camp_Lejeune__c/fields/Treatment_Facility_Information__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Facility_Information__c</fullName>
    <description>Please list all treatment facility names and addresses</description>
    <inlineHelpText>Please list all treatment facility names and addresses</inlineHelpText>
    <label>Treatment Facility Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>