force-app/main/default/objects/Camp_Lejeune__c/fields/Treatment_Location__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Location__c</fullName>
    <inlineHelpText>Where did you receive treatment?</inlineHelpText>
    <label>Treatment Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>