force-app/main/default/objects/Camp_Lejeune__c/fields/Type_of_Cardiac_Birth_Defect__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Cardiac_Birth_Defect__c</fullName>
    <inlineHelpText>What type of cardiac birth defect were you diagnosed with?</inlineHelpText>
    <label>Type of Cardiac Birth Defect</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anomalous pulmonary venous return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>