force-app/main/default/objects/Camp_Lejeune__c/fields/Worked_or_Lived_on_a_Military_Base__c.field-meta.xml
<CustomField>
    <fullName>Worked_or_Lived_on_a_Military_Base__c</fullName>
    <label>Worked or Lived on a Military Base</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Worked on military base</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>