force-app/main/default/objects/Camp_Lejeune__c/fields/Worked_or_Resided_at_Camp_Lejeune__c.field-meta.xml
<CustomField>
    <fullName>Worked_or_Resided_at_Camp_Lejeune__c</fullName>
    <label>Worked or Resided at Camp Lejeune?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Resided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>