force-app/main/default/objects/Camp_Lejeune__c/fields/Your_Relation_to_the_Service_Member__c.field-meta.xml
<CustomField>
    <fullName>Your_Relation_to_the_Service_Member__c</fullName>
    <label>Your Relation to the Service Member</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>